--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 .root {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 98vh;
 }
@@ -13,7 +13,7 @@
     flex-direction: column;
 }
 
-#modal_container {
+#modal_container, #modal_table_container {
     z-index: 1;
     width: 100%;
     height: 100%;
